RESOLVED FIXED148550
pluginInfo.clientLoadPolicy is used uninitialized in WebContent process
https://bugs.webkit.org/show_bug.cgi?id=148550
Summary pluginInfo.clientLoadPolicy is used uninitialized in WebContent process
Alexey Proskuryakov
Reported 2015-08-27 17:50:39 PDT
IPC message decoder is wrong.
Attachments
proposed fix (1.34 KB, patch)
2015-08-27 17:52 PDT, Alexey Proskuryakov
no flags
Alexey Proskuryakov
Comment 1 2015-08-27 17:52:36 PDT
Created attachment 260102 [details] proposed fix
Radar WebKit Bug Importer
Comment 2 2015-08-27 18:05:02 PDT
WebKit Commit Bot
Comment 3 2015-08-27 18:43:32 PDT
Comment on attachment 260102 [details] proposed fix Clearing flags on attachment: 260102 Committed r189080: <http://trac.webkit.org/changeset/189080>
WebKit Commit Bot
Comment 4 2015-08-27 18:43:36 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.