pluginInfo.clientLoadPolicy is used uninitialized in WebContent process https://bugs.webkit.org/show_bug.cgi?id=148550

Reviewed by Tim Horton.

This fixes flakiness on plugins/plugin-javascript-access.html.

* Shared/WebCoreArgumentCoders.cpp: (IPC::ArgumentCoder<PluginInfo>::decode):


Canonical link: https://commits.webkit.org/166667@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@189080 268f45cc-cd09-0410-ab3c-d52691b4dbfc